[package]
name = "corefreq-cli-to-csv"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
itertools = "0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
